fix: overflow in modal

--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -62,7 +62,7 @@
   font-size: vw(32);
   letter-spacing: 0.01em;
   text-align: center;
-  max-width: 70%;
+  max-width: 90%;
 
   @media (max-width: $br1) {
     font-size: 28px;
