--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   padding-top: vw(16);
   padding-bottom: vw(16);
   z-index: 100;
