--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -110,9 +110,9 @@
   height: calc(100% - var(--modal-header-height));
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
-  padding-right: 17px;
-  box-sizing: content-box;
+  overflow-y: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .modal__content {
